@@ -34,22 +34,88 @@ class GallerySession {}
  */
 @ini_set('session.use_cookies', 1);
 
-if (session_id()) {
-	/* 
-	 * The session is being created externally.  This means that if
-	 * we store our data in a GallerySession class, we won't be able
-	 * to deserialize it (because it's not being defined before the
-	 * external session starts).  So, we'll have to fall back on using
-	 * stdClass() which will cause problems on older PHP4 servers.
-	 * oh well.
-	 */
-	$useStdClass = 1;
-} else {
-	$useStdClass = 0;
+/* If using PHP < 4.3.2, create our own session_regenerate_id() function */
+if (!function_exists('session_regenerate_id')) {
+       function php_combined_lcg() {
+		$tv = gettimeofday();
+		$lcg['s1'] = $tv['sec'] ^ (~$tv['usec']);
+		$lcg['s2'] = posix_getpid();
+		$q = (int) ($lcg['s1'] / 53668);
+		$lcg['s1'] = (int) (40014 * ($lcg['s1'] - 53668 * $q) - 12211 * $q);
+		if ($lcg['s1'] < 0) {
+			$lcg['s1'] += 2147483563;
+		}
+		$q = (int) ($lcg['s2'] / 52774);
+		$lcg['s2'] = (int) (40692 * ($lcg['s2'] - 52774 * $q) - 3791 * $q);
+		if ($lcg['s2'] < 0) {
+			$lcg['s2'] += 2147483399;
+		}
+		$z = (int) ($lcg['s1'] - $lcg['s2']);
+		if ($z < 1) {
+			$z += 2147483562;
+		}
+		return $z * 4.656613e-10;
+       }
+
+	function session_regenerate_id() {
+		$tv = gettimeofday();
+		$buf = sprintf("%.15s%ld%ld%0.8f", $_SERVER['REMOTE_ADDR'], $tv['sec'], $tv['usec'], php_combined_lcg() * 10);
+		session_id(md5($buf));
+		if (ini_get('session.use_cookies')) {
+			setcookie(session_name(), session_id(), NULL, '/');
+		}
+		return TRUE;
+	}
 }
 
-/* Start a new session, or resume our current one */
-@session_start();
+function destroyGallerySession() {
+	// Unset all of the session variables.
+	$_SESSION = array();
+
+	// If it's desired to kill the session, also delete the session cookie.
+	// Note: This will destroy the session, and not just the session data!
+	if (isset($_COOKIE[session_name()])) {
+	   setcookie(session_name(), '', time()-42000, '/');
+	}
+
+	// Finally, destroy the session.
+	session_destroy();
+}
+
+function createGallerySession($newSession = false) {
+	global $useStdClass;
+
+	if (!session_id()) {
+		/* 
+		 * If no session has been created, set our session cookie name
+		 */
+		session_name('GallerySession');
+		$useStdClass = false;
+	} else {
+		/* 
+		 * The session is being created externally.  This means that if
+		 * we store our data in a GallerySession class, we won't be able
+		 * to deserialize it (because it's not being defined before the
+		 * external session starts).  So, we'll have to fall back on using
+		 * stdClass() which will cause problems on older PHP4 servers.
+		 * oh well.
+		 */
+		$useStdClass = true;
+	}
+
+	/* Start a new session, or resume our current one */
+	@session_start();
+
+	// If we're requesting a new session, generate a new session id
+	if ($newSession) {
+	    session_regenerate_id();
+	}
+
+	return $useStdClass;
+}
+
+// Create or resume our session
+$useStdClass = createGallerySession();
 
 /*
  * Are we resuming an existing session?  Determine this by checking
@@ -58,7 +124,7 @@ if (session_id()) {
  */
 
 if (empty($gallery->app->sessionVar)) {
-	$gSessionVar = "gallery_session_".md5(getcwd()); 
+	$gSessionVar = "gallery_session_" . md5(getcwd()); 
 } else {
 	$gSessionVar = $gallery->app->sessionVar . "_" . md5($gallery->app->userDir);
 }
